--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -6,10 +6,17 @@
   </head>
   <body>
     <h1> <%= @figure.name %> </h1>
-      <ul>
-        <% @figure.titles.each do |title| %>
-        <li><%= title.name %> </li>
-        <% end %>
-      </ul>
+    <h3>Titles:</h3>
+    <ul>
+      <% @figure.titles.each do |title| %>
+      <li><%= title.name %> </li>
+      <% end %>
+    </ul>
+    <h3>Landmarks:</h3>
+    <ul>
+      <% @figure.landmarks.each do |landmark| %>
+      <li> <%= landmark.name + " " + landmark.year_completed.to_s %> </li>
+      <% end %>
+    </ul>
   </body>
 </html>
